atualizando página sabores

--- a/src/app/Sabores/Sabores.module.css
+++ b/src/app/Sabores/Sabores.module.css
@@ -27,7 +27,7 @@
 }
 
 .titulo_banner_sabores h1 {
-    color: #FFFFFF;
+    color: white;
     font-size: 100px;
     text-shadow: 3px 5px 2px #474747;
 }
